--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,9 @@
     "com.unity.timeline": "1.4.8",
     "com.unity.toolchain.macos-x86_64-linux-x86_64": "0.1.22-preview",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.arcore": "4.1.7",
+    "com.unity.xr.arfoundation": "4.1.7",
+    "com.unity.xr.arkit": "4.1.7",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
